<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="example.passwordmanager.AddNewSecureNoteActivity">

    <TextView
        android:id="@+id/tv_header_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_secNoteTitle"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_entry_name"
        android:hint="@string/hint_secNote_name_entry"
        android:textSize="18dp"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/tv_header_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tv_secNotes"
        android:textSize="20dp"
        android:textStyle="bold" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <EditText
            android:id ="@+id/edtInput"
            android:layout_width ="368dp"
            android:layout_height ="wrap_content"
            android:layout_weight ="1"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLines ="10"
            android:maxLength ="2000"
            android:hint ="@string/hint_secure_note"
            android:scrollHorizontally="false" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|right"
        android:text="Save" />

</LinearLayout>