<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:minWidth="800dp"
    android:minHeight="200dp"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passGenDlgTitle"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingBottom="16dp"
        android:gravity="top" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/passwdContainer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/passwdDlgBgColour" >

                <ImageButton
                    android:id="@+id/refreshButton"
                    android:src="@drawable/ic_refresh_black_24dp"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_alignParentStart="true"
                    android:contentDescription="@string/refresh_button_description"/>

                <TextView
                    android:id="@+id/generatedPassTV"
                    android:layout_toEndOf="@+id/refreshButton"
                    android:layout_toStartOf="@+id/copyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ThisIsWhereThePasswordWillBeDisplayed"
                    android:textSize="20sp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:gravity="center_horizontal" />

                <ImageButton
                    android:id="@+id/copyButton"
                    android:src="@drawable/ic_content_copy_black_24dp"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/copy_button_description" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/passLenTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dlg_pass_len"
                    android:paddingBottom="8dp"/>

                <TextView
                    android:id="@+id/passLenTV"
                    android:layout_toRightOf="@+id/passLenTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:text="8"/>

                <SeekBar
                    android:id="@+id/passLenSeekBar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/passLenTitle"
                    android:max="120"/>

            </RelativeLayout>

            <!-- hidden settings start -->

            <LinearLayout
                android:id="@+id/hiddenSettingsContainer"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

            </LinearLayout>

            <!-- hidden settings end -->

        </LinearLayout>

    </ScrollView>

    <!--Anchored buttons-->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/dlgBtnSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_settings"
            android:layout_alignParentStart="true"
            style="?android:attr/borderlessButtonStyle" />

        <Button
            android:id="@+id/passGenBtnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_close"
            android:layout_toStartOf="@+id/dlgBtnSave"
            style="?android:attr/borderlessButtonStyle" />

        <Button
            android:id="@+id/dlgBtnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_save"
            android:layout_alignParentEnd="true"
            style="?android:attr/borderlessButtonStyle" />

    </RelativeLayout>

</LinearLayout>