<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="example.passwordmanager.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <!--<TextView-->
            <!--android:id="@+id/welcomeNameTV"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Welcome: name goes here"-->
            <!--android:textColor="@color/colorAccent"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:textStyle="bold"-->
            <!--android:textSize="22sp"/>-->

        <!--<TextView-->
            <!--android:id="@+id/email"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="email@goes.here"-->
            <!--android:textSize="18sp"-->
            <!--android:layout_marginTop="20dp" />-->

        <Button
            android:id="@+id/btnImport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/btn_import_db_bg"
            android:text="@string/btn_import_db"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btnExport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/btn_export_db_bg"
            android:text="@string/btn_export_db"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btnChgPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/btn_chg_pass_bg"
            android:text="@string/btn_chg_pass"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/btn_settings_logout_bg"
            android:text="@string/btn_logout"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>

<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:orientation="vertical"-->
    <!--tools:context="example.passwordmanager.SettingsActivity">-->

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal"-->
        <!--android:id="@+id/prof_section"-->
        <!--android:layout_marginLeft="20dp"-->
        <!--android:layout_marginTop="50dp">-->

        <!--<ImageView-->
            <!--android:layout_width="90dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/prof_pic"-->
            <!--android:src="@mipmap/ic_launcher" />-->

        <!--<LinearLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="28dp"-->
            <!--android:orientation="vertical"-->
            <!--android:layout_marginTop="20dp">-->

            <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Name Display here"-->
                <!--android:textSize="18dp"-->
                <!--android:textStyle="bold"-->
                <!--android:id="@+id/name"-->
                <!--android:gravity="center" />-->

            <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Email display here"-->
                <!--android:textSize="12dp"-->
                <!--android:textStyle="bold"-->
                <!--android:id="@+id/email"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:gravity="center"/>-->

            <!--<Button-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Logout Google Account"-->
                <!--android:id="@+id/btn_logout"/>-->

        <!--</LinearLayout>-->

    <!--</LinearLayout>-->

    <!--<com.google.android.gms.common.SignInButton-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="60dp"-->
        <!--android:layout_marginRight="50dp"-->
        <!--android:layout_marginLeft="50dp"-->
        <!--android:id="@+id/btn_google_login" />-->

<!--</LinearLayout>-->
